# SJTU-It-s-MYGIT-

./: CMakeLists.txt  README.md  main.cpp
include/: Blob.h  BranchManager.h  Commit.h  CommitManager.cpp  CommitManager.h  FileOperationManager.h  GitObj.h  MergeManager.h  RemoteManager.h  Repository.h  RepositoryCore.h  StagingArea.h  StatusManager.h
src/: Blob.cpp  BranchManager.cpp  Commit.cpp  Commit.h  CommitManager.cpp  FileOperationManager.cpp  GitObj.cpp  MergeManager.cpp  RemoteManager.cpp  Repository.cpp  RepositoryCore.cpp  StagingArea.cpp  StatusManager.cpp  Utils.cpp
